packages/react-notion-x/styles.css
/* ... */
.notion-external-mention .notion-external-description {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
}

.notion-external-title {
  font-size: 14px;
  font-weight: 500;
  color: var(--fg-color-4);
}

.notion-external-mention .notion-external-title {
  display: inline;
  font-size: 16px;
  border-bottom: 0.05em solid var(--fg-color-1);
}

.notion-external-subtitle {
  font-size: 12px;
  color: var(--fg-color-3);
}

.notion-external-mention .notion-external-subtitle {
  display: none;
}

.notion-yt-lite {
  background-color: #000;
  position: absolute;
  width: 100%;
  height: 100%;
  display: block;
  contain: content;
  background-position: center center;
  background-size: cover;
  cursor: pointer;
}

.notion-yt-lite::before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADGCAYAAAAT+OqFAAAAdklEQVQoz42QQQ7AIAgEF/T/D+kbq/RWAlnQyyazA4aoAB4FsBSA/bFjuF1EOL7VbrIrBuusmrt4ZZORfb6ehbWdnRHEIiITaEUKa5EJqUakRSaEYBJSCY2dEstQY7AuxahwXFrvZmWl2rh4JZ07z9dLtesfNj5q0FU3A5ObbwAAAABJRU5ErkJggg==);
  background-position: top;
  background-repeat: repeat-x;
  width: 100%;
  height: 60px;
  padding-bottom: 50px;
  transition: all 0.2s cubic-bezier(0, 0, 0.2, 1);
}

.notion-yt-lite > iframe {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
.notion-yt-playbtn {
  width: 68px;
  height: 48px;
  position: absolute;
  cursor: pointer;
  transform: translate3d(-50%, -50%, 0);
  top: 50%;
  left: 50%;
  z-index: 1;
  background-color: transparent;
  /* YT's actual play button svg */
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 68 48"><path d="M66.52 7.74c-.78-2.93-2.49-5.41-5.42-6.19C55.79.13 34 0 34 0S12.21.13 6.9 1.55c-2.93.78-4.63 3.26-5.42 6.19C.06 13.05 0 24 0 24s.06 10.95 1.48 16.26c.78 2.93 2.49 5.41 5.42 6.19C12.21 47.87 34 48 34 48s21.79-.13 27.1-1.55c2.93-.78 4.64-3.26 5.42-6.19C67.94 34.95 68 24 68 24s-.06-10.95-1.48-16.26z" fill="red"/><path d="M45 24 27 14v20" fill="white"/></svg>');
  filter: grayscale(100%);
  transition: filter 0.1s cubic-bezier(0, 0, 0.2, 1);
  border: none;
}
.notion-yt-lite:hover > .notion-yt-playbtn,
.notion-yt-youtube .notion-yt-playbtn:focus {
  filter: none;
}

.notion-yt-initialized {
  cursor: unset;
}
.notion-yt-initialized::before,
.notion-yt-initialized > .notion-yt-playbtn {
  opacity: 0;
  pointer-events: none;
}

.notion-yt-thumbnail {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.notion-collection-view-dropdown-content {
  font-family: var(--notion-font);
  min-width: 220;
  background: #fff;
  border-radius: 6;
  padding: 0;
  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
  animation-duration: 400ms;
  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
  animation-fill-mode: forwards;
  will-change: transform, opacity;
}

.notion-collection-view-dropdown-content-item {
  all: unset;
  position: relative;
  height: 25px;
  padding: 7px 96px 7px 10px;
  line-height: 1;
  display: flex;
  align-items: center;
  border-radius: 3px;
  user-select: none;
  cursor: pointer;
  color: rgb(55, 53, 47);
  font-size: 14px;
}

.notion-collection-view-dropdown-content-item[data-disabled] {
  color: #777;
  pointer-events: none;
  cursor: unset;
}

.notion-collection-view-dropdown-content-item:focus,
.notion-collection-view-dropdown-content-item-active {
  background-color: #ebfaff;
}

.notion-collection-view-dropdown-content-item-active-icon {
  position: absolute;
  right: 0;
  width: 32px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.notion-collection-view-dropdown-content-item-active-icon > svg {
  width: 12px;
}

@keyframes slideDownAndFade {
  0% {
    opacity: 0;
    transform: translateY(-2px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.notion-collection-view-dropdown-content[data-state='open'] {
  animation-name: slideDownAndFade;
}

